# result

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
examples/: CMakeLists.txt  basic.cpp
include/result/: result.hpp
test/: CMakeLists.txt  test_error.cpp  test_failure.cpp  test_result.cpp  test_success.cpp
